# scalable-websockets

./: .gitignore  Cargo.toml  LICENSE  README.md
load-test/: Cargo.toml
load-test/src/: connection.rs  main.rs  metrics.rs  report.rs
load-test/tests/: integration.rs
orchestrator/: Cargo.toml
orchestrator/src/: main.rs
scripts/: collect-metrics.sh  generate-report.sh  run-benchmark.sh
scripts/tuning/: tier-0-baseline.sh  tier-1-apply.sh  tier-1-revert.sh  tier-2-apply.sh  tier-2-revert.sh  tier-3-apply.sh  tier-3-revert.sh  tier-4-apply.sh  tier-4-revert.sh  tier-5-apply.sh  tier-5-revert.sh  tier-6-apply.sh  tier-7-apply.sh  tier-7-revert.sh  tier-8-apply.sh  tier-8-revert.sh  tier-9-apply.sh  tier-9-revert.sh
server/: Cargo.toml
server/src/: common.rs  main.rs  tokio_ws.rs  tungstenite.rs  wtx_impl.rs
terraform/: clients.tf  main.tf  outputs.tf  project.tf  server.tf  variables.tf
terraform/templates/: client-cloud-init.yaml  server-cloud-init.yaml
